crates/service/tests/call_hierarchy/snapshots/features__call_hierarchy__f1_outgoing.snap
---
source: crates/service/tests/call_hierarchy/mod.rs
expression: prepare
---
[
  {
    "name": "$f1",
    "kind": 12,
    "detail": "(func $f1)",
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 4
      },
      "end": {
        "line": 2,
        "character": 14
      }
    },
    "selectionRange": {
      "start": {
        "line": 2,
        "character": 10
      },
      "end": {
        "line": 2,
        "character": 13
      }
    }
  }
]
