crates/service/tests/call_hierarchy/snapshots/features__call_hierarchy__f2_incoming.snap
---
source: crates/service/tests/call_hierarchy/mod.rs
expression: prepare
---
[
  {
    "name": "$f2",
    "kind": 12,
    "tags": [
      1
    ],
    "detail": "(func $f2)",
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 4
      },
      "end": {
        "line": 4,
        "character": 36
      }
    },
    "selectionRange": {
      "start": {
        "line": 4,
        "character": 10
      },
      "end": {
        "line": 4,
        "character": 13
      }
    }
  }
]
