crates/service/tests/call_hierarchy/snapshots/features__call_hierarchy__f2_outgoing-2.snap
---
source: crates/service/tests/call_hierarchy/mod.rs
expression: outgoing_calls
---
[
  {
    "to": {
      "name": "$f1",
      "kind": 12,
      "detail": "(func $f1)",
      "uri": "untitled:test",
      "range": {
        "start": {
          "line": 2,
          "character": 4
        },
        "end": {
          "line": 2,
          "character": 14
        }
      },
      "selectionRange": {
        "start": {
          "line": 2,
          "character": 10
        },
        "end": {
          "line": 2,
          "character": 13
        }
      }
    },
    "fromRanges": [
      {
        "start": {
          "line": 3,
          "character": 20
        },
        "end": {
          "line": 3,
          "character": 23
        }
      }
    ]
  },
  {
    "to": {
      "name": "$f2",
      "kind": 12,
      "detail": "(func $f2)",
      "uri": "untitled:test",
      "range": {
        "start": {
          "line": 3,
          "character": 4
        },
        "end": {
          "line": 3,
          "character": 36
        }
      },
      "selectionRange": {
        "start": {
          "line": 3,
          "character": 10
        },
        "end": {
          "line": 3,
          "character": 13
        }
      }
    },
    "fromRanges": [
      {
        "start": {
          "line": 3,
          "character": 31
        },
        "end": {
          "line": 3,
          "character": 34
        }
      }
    ]
  }
]
