crates/service/tests/call_hierarchy/snapshots/features__call_hierarchy__f3_outgoing-2.snap
---
source: crates/service/tests/call_hierarchy/mod.rs
expression: outgoing_calls
---
[
  {
    "to": {
      "name": "$f1",
      "kind": 12,
      "detail": "(func $f1)",
      "uri": "untitled:test",
      "range": {
        "start": {
          "line": 2,
          "character": 4
        },
        "end": {
          "line": 2,
          "character": 14
        }
      },
      "selectionRange": {
        "start": {
          "line": 2,
          "character": 10
        },
        "end": {
          "line": 2,
          "character": 13
        }
      }
    },
    "fromRanges": [
      {
        "start": {
          "line": 5,
          "character": 20
        },
        "end": {
          "line": 5,
          "character": 23
        }
      }
    ]
  },
  {
    "to": {
      "name": "$f2",
      "kind": 12,
      "tags": [
        1
      ],
      "detail": "(func $f2)",
      "uri": "untitled:test",
      "range": {
        "start": {
          "line": 4,
          "character": 4
        },
        "end": {
          "line": 4,
          "character": 36
        }
      },
      "selectionRange": {
        "start": {
          "line": 4,
          "character": 10
        },
        "end": {
          "line": 4,
          "character": 13
        }
      }
    },
    "fromRanges": [
      {
        "start": {
          "line": 5,
          "character": 31
        },
        "end": {
          "line": 5,
          "character": 34
        }
      }
    ]
  },
  {
    "to": {
      "name": "$f3",
      "kind": 12,
      "detail": "(func $f3)",
      "uri": "untitled:test",
      "range": {
        "start": {
          "line": 5,
          "character": 4
        },
        "end": {
          "line": 5,
          "character": 47
        }
      },
      "selectionRange": {
        "start": {
          "line": 5,
          "character": 10
        },
        "end": {
          "line": 5,
          "character": 13
        }
      }
    },
    "fromRanges": [
      {
        "start": {
          "line": 5,
          "character": 42
        },
        "end": {
          "line": 5,
          "character": 45
        }
      }
    ]
  }
]
