crates/service/tests/call_hierarchy/snapshots/features__call_hierarchy__f3_outgoing.snap
---
source: crates/service/tests/call_hierarchy/mod.rs
expression: prepare
---
[
  {
    "name": "$f3",
    "kind": 12,
    "detail": "(func $f3)",
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 4
      },
      "end": {
        "line": 5,
        "character": 47
      }
    },
    "selectionRange": {
      "start": {
        "line": 5,
        "character": 10
      },
      "end": {
        "line": 5,
        "character": 13
      }
    }
  }
]
